# tl_base_ci

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
cmake/: add_interface.cmake  add_library.cmake  add_sdl.cmake  common.cmake
cmake/projects/: add_sdl.cmake
include/tl_base_ci/: add_interface.cmake  add_library.cmake  add_ycm_config.cmake  autogen.cmake  tl_add_ctagsignore.cmake  tl_add_executable.cmake  tl_add_gitignore.cmake  tl_add_interface.cmake  tl_add_library.cmake  tl_add_setup.cmake  tl_add_superbuild.cmake  tl_add_travis.cmake  tl_add_ycm_config.cmake  tl_autogen_single_include_cmake.cmake  tl_autogen_single_include_hader.cmake  tl_autogen_single_include_header.cmake  tl_base_ci.cmake  tl_common.cmake  tl_external_project.cmake  tl_fetchcontent.cmake  tl_find_package.cmake  tl_include_guard.cmake  tl_include_helper.cmake  tl_logging.cmake  tl_map.cmake  tl_paths.cmake  tl_string.cmake
include/tl_base_ci/configure_file/: tl_setup_vars.cmake  tl_superbuild_cmakelists.cmake  tl_superbuild_cmakelists.cmake.in  tl_ycm_extra_conf.py.in
tests/cmake/: CMakeLists.txt
tests/cmake/include/: A.cpp  A.h  B.cpp  B.h  C.cpp  C.h  CMakeLists.txt  D.cpp  D.h
tests/cmake/include/factorial/: CMakeLists.txt  factorial.h
tests/cmake/include/factorial_test/: CMakeLists.txt  main.cpp
tests/cmake/include/fibonacci/: CMakeLists.txt  fib_double.cpp  fib_double.h  fib_float.cpp  fib_float.h  fib_int.cpp  fib_int.h  fib_long_double.cpp  fib_long_double.h  fibonacci.h
tests/cmake/include/fibonacci_test/: CMakeLists.txt  main.cpp  main.h
(+4 files in other folders)
